CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT(test)

MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/raknet)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/raknet)

SET(LINK_LIBS raknet)

ADD_SUBDIRECTORY(raknet)
ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(server)