CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT(test)

MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/asio_helper)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/asio_helper)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/raknet)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/raknet)

FIND_PACKAGE(Boost REQUIRED COMPONENTS system)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})


SET(LINK_LIBS_COMMON asio_helper raknet ${Boost_LIBRARIES})
IF(WIN32)
	SET(LINK_LIBS ${LINK_LIBS_COMMON} ws2_32)
ELSE()
	SET(LINK_LIBS ${LINK_LIBS_COMMON} pthread)
ENDIF()

ADD_SUBDIRECTORY(asio_helper)
ADD_SUBDIRECTORY(raknet)
ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(server)